new launcher and preference page